[gd_scene load_steps=5 format=3 uid="uid://bnf28374hirph"]

[ext_resource type="Script" uid="uid://hiky8pw8lu8b" path="res://scripts/transaction_input.gd" id="1_cqf2e"]
[ext_resource type="Theme" uid="uid://gho3l34xmwce" path="res://themes/theme_default.tres" id="1_s4qvn"]
[ext_resource type="PackedScene" uid="uid://bw2trii56cowr" path="res://scenes/money_edit.tscn" id="2_ar8de"]
[ext_resource type="PackedScene" uid="uid://4ryyc41mgaw2" path="res://scenes/check_box_or_delete_button.tscn" id="4_j7va1"]

[node name="TransactionInput" type="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
offset_right = 300.0
offset_bottom = 31.0
theme = ExtResource("1_s4qvn")
script = ExtResource("1_cqf2e")

[node name="NameEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name"
max_length = 20

[node name="AmountEdit" parent="." instance=ExtResource("2_ar8de")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Â£0.00"
amount = 0.0

[node name="CheckBoxOrDeleteButton" parent="." instance=ExtResource("4_j7va1")]
unique_name_in_owner = true
layout_mode = 2
checked = true

[connection signal="focus_exited" from="NameEdit" to="." method="_on_name_edit_focus_exited"]
[connection signal="text_changed" from="NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="text_submitted" from="NameEdit" to="." method="_on_name_edit_text_submitted"]
[connection signal="amount_changed" from="AmountEdit" to="." method="_on_amount_edit_amount_changed"]
[connection signal="check_box_pressed" from="CheckBoxOrDeleteButton" to="." method="_on_check_box_or_delete_button_check_box_pressed"]
[connection signal="delete_button_pressed" from="CheckBoxOrDeleteButton" to="." method="_on_check_box_or_delete_button_delete_button_pressed"]
